fixed focus clipping and spurious horizontal scrollbars
unfortunately, the need for `overflow: visible;` means that the
float-clearing is far removed from the actual floats

--- a/assets/main.css
+++ b/assets/main.css
@@ -44,11 +44,8 @@ input[type=checkbox][disabled],
 	list-style-type: none;
 }
 
-.rows > li {
-	overflow: auto; /* contain floats */
-}
-
 .rows {
+	overflow: auto; /* contain floats */
 	padding: 0 1em;
 }
 
